--- a/Citi Bike Data/CitiBike_analysis.ipynb
+++ b/Citi Bike Data/CitiBike_analysis.ipynb
@@ -398,6 +398,271 @@
     "jan_df = pd.read_csv(jan_csv_path)\n",
     "jan_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ride_id                object\n",
+       "rideable_type          object\n",
+       "started_at             object\n",
+       "ended_at               object\n",
+       "start_station_name     object\n",
+       "start_station_id       object\n",
+       "end_station_name       object\n",
+       "end_station_id         object\n",
+       "start_lat             float64\n",
+       "start_lng             float64\n",
+       "end_lat               float64\n",
+       "end_lng               float64\n",
+       "member_casual          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jan_df.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50661"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(jan_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citibike_df = pd.concat([july_df, jan_df],ignore_index = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "157269"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(citibike_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citibike_df.to_csv(\"./citibike_data.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ride_id</th>\n",
+       "      <th>rideable_type</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>end_lat</th>\n",
+       "      <th>end_lng</th>\n",
+       "      <th>member_casual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>157264</th>\n",
+       "      <td>75E5CF948A4ADB77</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-01-25 20:51:27</td>\n",
+       "      <td>2024-01-25 20:59:16</td>\n",
+       "      <td>Willow Ave &amp; 12 St</td>\n",
+       "      <td>HB505</td>\n",
+       "      <td>Clinton St &amp; 7 St</td>\n",
+       "      <td>HB303</td>\n",
+       "      <td>40.751920</td>\n",
+       "      <td>-74.030396</td>\n",
+       "      <td>40.74542</td>\n",
+       "      <td>-74.03332</td>\n",
+       "      <td>casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157265</th>\n",
+       "      <td>58DD5BF65F9B9E31</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-01-27 09:03:41</td>\n",
+       "      <td>2024-01-27 09:08:47</td>\n",
+       "      <td>Southwest Park - Jackson St &amp; Observer Hwy</td>\n",
+       "      <td>HB401</td>\n",
+       "      <td>Clinton St &amp; 7 St</td>\n",
+       "      <td>HB303</td>\n",
+       "      <td>40.737551</td>\n",
+       "      <td>-74.041664</td>\n",
+       "      <td>40.74542</td>\n",
+       "      <td>-74.03332</td>\n",
+       "      <td>casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157266</th>\n",
+       "      <td>F0FBCE423BE48B08</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2024-01-28 14:46:29</td>\n",
+       "      <td>2024-01-28 14:51:43</td>\n",
+       "      <td>Southwest Park - Jackson St &amp; Observer Hwy</td>\n",
+       "      <td>HB401</td>\n",
+       "      <td>Clinton St &amp; 7 St</td>\n",
+       "      <td>HB303</td>\n",
+       "      <td>40.737551</td>\n",
+       "      <td>-74.041664</td>\n",
+       "      <td>40.74542</td>\n",
+       "      <td>-74.03332</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157267</th>\n",
+       "      <td>7DD51CAD2DBE7990</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2024-01-10 08:03:47</td>\n",
+       "      <td>2024-01-10 08:10:55</td>\n",
+       "      <td>Southwest Park - Jackson St &amp; Observer Hwy</td>\n",
+       "      <td>HB401</td>\n",
+       "      <td>Clinton St &amp; 7 St</td>\n",
+       "      <td>HB303</td>\n",
+       "      <td>40.737551</td>\n",
+       "      <td>-74.041664</td>\n",
+       "      <td>40.74542</td>\n",
+       "      <td>-74.03332</td>\n",
+       "      <td>casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157268</th>\n",
+       "      <td>A48A85D58AFEBAA3</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-01-29 12:22:47</td>\n",
+       "      <td>2024-01-29 12:25:33</td>\n",
+       "      <td>Willow Ave &amp; 12 St</td>\n",
+       "      <td>HB505</td>\n",
+       "      <td>Bloomfield St &amp; 15 St</td>\n",
+       "      <td>HB203</td>\n",
+       "      <td>40.751956</td>\n",
+       "      <td>-74.030405</td>\n",
+       "      <td>40.75453</td>\n",
+       "      <td>-74.02658</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ride_id  rideable_type           started_at  \\\n",
+       "157264  75E5CF948A4ADB77  electric_bike  2024-01-25 20:51:27   \n",
+       "157265  58DD5BF65F9B9E31  electric_bike  2024-01-27 09:03:41   \n",
+       "157266  F0FBCE423BE48B08   classic_bike  2024-01-28 14:46:29   \n",
+       "157267  7DD51CAD2DBE7990   classic_bike  2024-01-10 08:03:47   \n",
+       "157268  A48A85D58AFEBAA3  electric_bike  2024-01-29 12:22:47   \n",
+       "\n",
+       "                   ended_at                          start_station_name  \\\n",
+       "157264  2024-01-25 20:59:16                          Willow Ave & 12 St   \n",
+       "157265  2024-01-27 09:08:47  Southwest Park - Jackson St & Observer Hwy   \n",
+       "157266  2024-01-28 14:51:43  Southwest Park - Jackson St & Observer Hwy   \n",
+       "157267  2024-01-10 08:10:55  Southwest Park - Jackson St & Observer Hwy   \n",
+       "157268  2024-01-29 12:25:33                          Willow Ave & 12 St   \n",
+       "\n",
+       "       start_station_id       end_station_name end_station_id  start_lat  \\\n",
+       "157264            HB505      Clinton St & 7 St          HB303  40.751920   \n",
+       "157265            HB401      Clinton St & 7 St          HB303  40.737551   \n",
+       "157266            HB401      Clinton St & 7 St          HB303  40.737551   \n",
+       "157267            HB401      Clinton St & 7 St          HB303  40.737551   \n",
+       "157268            HB505  Bloomfield St & 15 St          HB203  40.751956   \n",
+       "\n",
+       "        start_lng   end_lat   end_lng member_casual  \n",
+       "157264 -74.030396  40.74542 -74.03332        casual  \n",
+       "157265 -74.041664  40.74542 -74.03332        casual  \n",
+       "157266 -74.041664  40.74542 -74.03332        member  \n",
+       "157267 -74.041664  40.74542 -74.03332        casual  \n",
+       "157268 -74.030405  40.75453 -74.02658        member  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "citibike_df.tail()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#End of Code"
+   ]
   }
  ],
  "metadata": {
